# AppliedRoboticsStudentInterface

./: .gitignore  CMakeLists.txt  README.md
html/: annotated.html  annotated_dup.js  classes.html  classnav_1_1_nav_map-members.html  classnav_1_1_nav_map.html  classnav_1_1_nav_map.js  classrm_1_1_road_map-members.html  classrm_1_1_road_map.html  classrm_1_1_road_map.js  classrm_1_1_road_map_1_1_node-members.html  classrm_1_1_road_map_1_1_node.html  classrm_1_1_road_map_1_1_node.js  classrm_1_1_road_map_1_1_node_1_1_orientation-members.html  classrm_1_1_road_map_1_1_node_1_1_orientation.html  classrm_1_1_road_map_1_1_node_1_1_orientation.js  classutils_1_1_matlab_plot-members.html  classutils_1_1_matlab_plot.html  classutils_1_1_matlab_plot.js  classutils_1_1_timer-members.html  classutils_1_1_timer.html  classutils_1_1_timer.js  dir_08a15bf95a771cd779bfe3d307b71bae.html  dir_08a15bf95a771cd779bfe3d307b71bae.js  dir_523f926e30eb447d405665589fa20e5d.html  dir_523f926e30eb447d405665589fa20e5d.js  dir_584542cd9f852ec6ad57d0b7f941b7bb.html  dir_584542cd9f852ec6ad57d0b7f941b7bb.js  dir_5b07f99fcc120e91bcc8d9bca4e775f2.html  dir_5b07f99fcc120e91bcc8d9bca4e775f2.js  dir_8f215eaf2c0f08f01fd6f34dd302c917.html  dir_8f215eaf2c0f08f01fd6f34dd302c917.js  dir_def106f1126580e2ca336b1b0a85ce2f.html  dir_def106f1126580e2ca336b1b0a85ce2f.js  dubins_8hpp.html  dubins_8hpp.js  dubins_8hpp_source.html  files.html  files_dup.js  functions.html  functions_func.html  (+61 more)
html/html/: index.html  inflate_8hpp.html  inflate_8hpp_source.html  max_clearance_8hpp.html  max_clearance_8hpp.js  max_clearance_8hpp_source.html  namespacedubins.html  namespacedubins.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacenav.html  namespacerm.html  namespacerm.js  namespaces.html  namespaces_dup.js  namespacestudent.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  structdubins_1_1_dubins_arc-members.html  structdubins_1_1_dubins_arc.html  structdubins_1_1_dubins_arc.js  structdubins_1_1_dubins_curve-members.html  structdubins_1_1_dubins_curve.html  structdubins_1_1_dubins_curve.js  structdubins_1_1_pose2_d-members.html  structdubins_1_1_pose2_d.html  structdubins_1_1_pose2_d.js  structrm_1_1_box-members.html  structrm_1_1_box.html  structrm_1_1_box.js  structrm_1_1_road_map_1_1_dubins_connection-members.html  structrm_1_1_road_map_1_1_dubins_connection.html  structrm_1_1_segment-members.html  structrm_1_1_segment.html  structrm_1_1_segment.js  student__interface_8cpp.html  student__interface_8cpp.js
html/search/: all_0.js  all_10.js  all_12.js  all_14.js  all_15.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  (+51 more)
include/: student_planning_interface.hpp  test.hpp
maps/: map_2_gates_3obs.xml  map_3_gates_4obs.xml  map_3_gates_5obs.xml  map_3_gates_6obs.xml
src/: Dub_curves.cpp  Dub_curves.h  dubCurves.cpp  student_interface.cpp
test/: CMakeLists.txt  benchmarkNavMap.cpp  map_out.txt  testCollision.cpp  testDijkstra.cpp  testDub.cpp  testInflation.cpp  testNavMap.cpp  testRoadMap.cpp
(+33 files in other folders)
